completed the first part of connecting python with the database

--- a/Week12_Basic_Database_with_SQLite_InClass_Exercise1.ipynb
+++ b/Week12_Basic_Database_with_SQLite_InClass_Exercise1.ipynb
@@ -42,56 +42,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "69dc489c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:40:39.273733700Z",
+     "start_time": "2023-12-11T10:40:39.240737200Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Mayo Clinic', 200), ('Cleveland', 400), ('Johns Hopkins', 1000), ('UCLA Medical Center', 1500)]\n",
+      "Hospital Name: Mayo Clinic, Bed Count: 400\n"
+     ]
+    }
+   ],
    "source": [
     "#import sqlite module\n",
+    "import sqlite3\n",
     "\n",
     "#connect python to SQLite database\n",
+    "conn = sqlite3.connect('HospitalDB.db')\n",
     "\n",
     "\n",
     "#create a cursor object\n",
-    "\n",
+    "cursor = conn.cursor()\n",
     "\n",
     "#SQL statment to retrieve all Hospital Name and Bed_Count from Hospital table\n",
-    "\n",
+    "sql_statement = \"SELECT Hospital_Name, Bed_Count FROM Hospitals\"\n",
     "\n",
     "# Execute SQL query\n",
-    "\n",
+    "cursor.execute(sql_statement)\n",
     "\n",
     "#fetch all rows result from a SELECT statement\n",
+    "sql_result = cursor.fetchall()\n",
     "\n",
-    "\n",
-    "# Display result from query\n"
+    "# Display result from query\n",
+    "print(sql_result)\n",
+    "print(f\"Hospital Name: {sql_result[0][0]}, Bed Count: {sql_result[1][1]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "71dcea13",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:40:39.380470800Z",
+     "start_time": "2023-12-11T10:40:39.271726900Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(101, 'David', 1, '2005-2-10', 'Pediatric', 40000, 20), (102, 'Michael', 1, '2018-07-23', 'Oncologist', 20000, 3), (103, 'Susan', 2, '2016-05-19', 'Garnacologist', 25000, 5), (104, 'Robert', 2, '2017-12-28', 'Pediatric ', 28000, 8), (105, 'Linda', 3, '2004-06-04', 'Garnacologist', 42000, 22)]\n",
+      "Doctor ID: 101, Doctor Name: David, Hospital ID: 1, Joining Date: 2005-2-10, Speciality: Pediatric, Salary: 40000, Experience: 20\n",
+      "Doctor ID: 102, Doctor Name: Michael, Hospital ID: 1, Joining Date: 2018-07-23, Speciality: Oncologist, Salary: 20000, Experience: 3\n",
+      "Doctor ID: 103, Doctor Name: Susan, Hospital ID: 2, Joining Date: 2016-05-19, Speciality: Garnacologist, Salary: 25000, Experience: 5\n",
+      "Doctor ID: 104, Doctor Name: Robert, Hospital ID: 2, Joining Date: 2017-12-28, Speciality: Pediatric , Salary: 28000, Experience: 8\n",
+      "Doctor ID: 105, Doctor Name: Linda, Hospital ID: 3, Joining Date: 2004-06-04, Speciality: Garnacologist, Salary: 42000, Experience: 22\n"
+     ]
+    }
+   ],
    "source": [
     "#SQL statement to retriev Doctor information from Doctors table table\n",
+    "sql_statement2 = \"SELECT * FROM Doctors\"\n",
     "\n",
     "\n",
     "# Execute SQL query\n",
+    "cursor.execute(sql_statement2)\n",
     "\n",
     "\n",
     "#fetch 5 rows that result from a SELECT statement\n",
+    "doctor_result = cursor.fetchmany(5)\n",
     "\n",
     "\n",
-    "# Display result from query\n"
+    "# Display result from query\n",
+    "print(doctor_result)\n",
+    "\n",
+    "for doctor in doctor_result:\n",
+    "    print(f\"Doctor ID: {doctor[0]}, Doctor Name: {doctor[1]}, Hospital ID: {doctor[2]}, Joining Date: {doctor[3]}, Speciality: {doctor[4]}, Salary: {doctor[5]}, Experience: {doctor[6]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1510e773",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:40:39.428154400Z",
+     "start_time": "2023-12-11T10:40:39.374473700Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function Connection.close()>"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conn.close"
    ]
