prompt the user to get details they want to see returned and also used a where clause

--- a/Week12_Basic_Database_with_SQLite_InClass_Exercise2.ipynb
+++ b/Week12_Basic_Database_with_SQLite_InClass_Exercise2.ipynb
@@ -42,75 +42,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "15b4ed67",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:55:06.793474800Z",
+     "start_time": "2023-12-11T10:55:03.545524800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 'Cleveland', 400, 101)\n",
+      "Hospital ID: 2, Hospital Name: Cleveland, Bed Count: 400, Address: 101\n"
+     ]
+    }
+   ],
    "source": [
     "#import sqlite module\n",
+    "import sqlite3\n",
     "\n",
     "#connect python to SQLite database\n",
-    "\n",
+    "conn = sqlite3.connect('HospitalDB.db')\n",
     "\n",
     "#create a cursor object\n",
-    "\n",
+    "cursor = conn.cursor()\n",
     "\n",
     "# Prompt the user to provide a Hospital ID\n",
-    "\n",
+    "user_input = input(\"Please enter a Hospital ID: \")\n",
     "\n",
     "# Create an SQL query\n",
+    "sql_statement = \"SELECT * FROM Hospitals WHERE Hospital_Id = ?\"\n",
     "\n",
     "\n",
     "# Execute SQL query\n",
-    "\n",
+    "cursor.execute(sql_statement, (user_input,))\n",
     "\n",
     "#fetch result from a SELECT statement\n",
+    "hospital_1 = cursor.fetchone()\n",
     "\n",
-    "\n",
-    "# Display result from query\n"
+    "# Display result from query\n",
+    "print(hospital_1)\n",
+    "print(f\"Hospital ID: {hospital_1[0]}, Hospital Name: {hospital_1[1]}, Bed Count: {hospital_1[2]}, Address: {hospital_1[3]}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "694b1834",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T10:58:44.813696200Z",
+     "start_time": "2023-12-11T10:58:41.226424100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(101, 'David', 1, '2005-2-10', 'Pediatric', 40000, 20)\n",
+      "Doctor ID: 101, Doctor Name: David, Hospital ID: 1, Joining Date: 2005-2-10, Speciality: Pediatric, Salary: 40000, Experience: 20\n"
+     ]
+    }
+   ],
    "source": [
     "# Prompt the user to input a Doctor ID\n",
-    "\n",
+    "user_input = input(\"Please enter a Doctor ID: \")\n",
     "\n",
     "# Create an SQL query\n",
-    "\n",
+    "sql_statement3 = \"SELECT * FROM Doctors WHERE Doctor_Id = ?\"\n",
     "\n",
     "# Execute SQL query\n",
-    "\n",
+    "cursor.execute(sql_statement3, (user_input,))\n",
     "\n",
     "#fetch result from a SELECT statement\n",
+    "doctor_1 = cursor.fetchone()\n",
     "\n",
-    "\n",
-    "# Display result from query \n"
+    "# Display result from query \n",
+    "print(doctor_1)\n",
+    "print(f\"Doctor ID: {doctor_1[0]}, Doctor Name: {doctor_1[1]}, Hospital ID: {doctor_1[2]}, Joining Date: {doctor_1[3]}, Speciality: {doctor_1[4]}, Salary: {doctor_1[5]}, Experience: {doctor_1[6]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "933d1a52",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:05:21.235693500Z",
+     "start_time": "2023-12-11T11:04:58.258793500Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(101, 'David', 1, '2005-2-10', 'Pediatric', 40000, 20)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Prompt the user to input a specialty and salary\n",
+    "specialty = input(\"Please enter a specialty: \")\n",
+    "salary = input(\"Please enter a salary: \")\n",
     "\n",
     "# Create an SQL query\n",
-    "\n",
+    "sql_statement2 = \"SELECT * FROM Doctors WHERE Speciality = ? AND Salary = ?\"\n",
     "\n",
     "# Execute SQL query\n",
-    "\n",
-    "\n",
+    "cursor.execute(sql_statement2, (specialty, salary))\n",
     "#fetch result from a SELECT statement\n",
+    "doctor_2 = cursor.fetchall()\n",
     "\n",
     "\n",
-    "# Display result from query \n"
+    "# Display result from query \n",
+    "print(doctor_2)"
    ]
   },
   {
