prompt the user to get details they want to see returned and also used a where clause

--- a/Week12_Basic_Database_with_SQLite_InClass_Exercise2.ipynb
+++ b/Week12_Basic_Database_with_SQLite_InClass_Exercise2.ipynb
@@ -42,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "15b4ed67",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T10:55:06.793474800Z",
-     "start_time": "2023-12-11T10:55:03.545524800Z"
+     "end_time": "2023-12-11T11:06:41.560320900Z",
+     "start_time": "2023-12-11T11:06:38.502668900Z"
     }
    },
    "outputs": [
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 'Cleveland', 400, 101)\n",
-      "Hospital ID: 2, Hospital Name: Cleveland, Bed Count: 400, Address: 101\n"
+      "(1, 'Mayo Clinic', 200, 100)\n",
+      "Hospital ID: 1, Hospital Name: Mayo Clinic, Bed Count: 200, Address: 100\n"
      ]
     }
    ],
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "694b1834",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T10:58:44.813696200Z",
-     "start_time": "2023-12-11T10:58:41.226424100Z"
+     "end_time": "2023-12-11T11:39:26.614750500Z",
+     "start_time": "2023-12-11T11:39:24.297439300Z"
     }
    },
    "outputs": [
@@ -128,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "933d1a52",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T11:05:21.235693500Z",
-     "start_time": "2023-12-11T11:04:58.258793500Z"
+     "end_time": "2023-12-11T11:39:52.351503900Z",
+     "start_time": "2023-12-11T11:39:29.605721400Z"
     }
    },
    "outputs": [
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(101, 'David', 1, '2005-2-10', 'Pediatric', 40000, 20)]\n"
+      "[]\n"
      ]
     }
    ],
@@ -165,10 +165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1510e773",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:07:00.990502Z",
+     "start_time": "2023-12-11T11:07:00.965432400Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function Connection.close()>"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "conn.close"
    ]
