--- a/Week12_Basic_Database_with_SQLite_Notes.ipynb
+++ b/Week12_Basic_Database_with_SQLite_Notes.ipynb
@@ -388,12 +388,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f822d886",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-11T09:52:17.190229400Z",
-     "start_time": "2023-12-11T09:52:15.046358900Z"
+     "end_time": "2023-12-11T11:20:53.129708700Z",
+     "start_time": "2023-12-11T11:20:53.079726900Z"
     }
    },
    "outputs": [
@@ -421,7 +421,7 @@
       "text/plain": "     Surname  Employee ID       Name                            E-mail  \\\n0       King          100     Steven       steven.king@sqltutorial.org   \n1    Kochhar          101      Neena     neena.kochhar@sqltutorial.org   \n2    De Haan          102        Lex       lex.de haan@sqltutorial.org   \n3     Hunold          103  Alexander  alexander.hunold@sqltutorial.org   \n4      Ernst          104      Bruce       bruce.ernst@sqltutorial.org   \n5     Austin          105      David      david.austin@sqltutorial.org   \n6  Pataballa          106      Valli   valli.pataballa@sqltutorial.org   \n7    Lorentz          107      Diana     diana.lorentz@sqltutorial.org   \n8  Greenberg          108      Nancy   nancy.greenberg@sqltutorial.org   \n9     Faviet          109     Daniel     daniel.faviet@sqltutorial.org   \n\n      Phone No.  Hired Date  JobID   Salary  Manger ID  Department ID  \n0  515.123.4567  1987-06-17      4  24000.0        NaN              9  \n1  515.123.4568  1989-09-21      5  17000.0      100.0              9  \n2  515.123.4569  1993-01-13      5  17000.0      100.0              9  \n3  590.423.4567  1990-01-03      9   9000.0      102.0              6  \n4  590.423.4568  1991-05-21      9   6000.0      103.0              6  \n5  590.423.4569  1997-06-25      9   4800.0      103.0              6  \n6  590.423.4560  1998-02-05      9   4800.0      103.0              6  \n7  590.423.5567  1999-02-07      9   4200.0      103.0              6  \n8  515.124.4569  1994-08-17      7  12000.0      101.0             10  \n9  515.124.4169  1994-08-16      6   9000.0      108.0             10  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Surname</th>\n      <th>Employee ID</th>\n      <th>Name</th>\n      <th>E-mail</th>\n      <th>Phone No.</th>\n      <th>Hired Date</th>\n      <th>JobID</th>\n      <th>Salary</th>\n      <th>Manger ID</th>\n      <th>Department ID</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>King</td>\n      <td>100</td>\n      <td>Steven</td>\n      <td>steven.king@sqltutorial.org</td>\n      <td>515.123.4567</td>\n      <td>1987-06-17</td>\n      <td>4</td>\n      <td>24000.0</td>\n      <td>NaN</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Kochhar</td>\n      <td>101</td>\n      <td>Neena</td>\n      <td>neena.kochhar@sqltutorial.org</td>\n      <td>515.123.4568</td>\n      <td>1989-09-21</td>\n      <td>5</td>\n      <td>17000.0</td>\n      <td>100.0</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>De Haan</td>\n      <td>102</td>\n      <td>Lex</td>\n      <td>lex.de haan@sqltutorial.org</td>\n      <td>515.123.4569</td>\n      <td>1993-01-13</td>\n      <td>5</td>\n      <td>17000.0</td>\n      <td>100.0</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Hunold</td>\n      <td>103</td>\n      <td>Alexander</td>\n      <td>alexander.hunold@sqltutorial.org</td>\n      <td>590.423.4567</td>\n      <td>1990-01-03</td>\n      <td>9</td>\n      <td>9000.0</td>\n      <td>102.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Ernst</td>\n      <td>104</td>\n      <td>Bruce</td>\n      <td>bruce.ernst@sqltutorial.org</td>\n      <td>590.423.4568</td>\n      <td>1991-05-21</td>\n      <td>9</td>\n      <td>6000.0</td>\n      <td>103.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Austin</td>\n      <td>105</td>\n      <td>David</td>\n      <td>david.austin@sqltutorial.org</td>\n      <td>590.423.4569</td>\n      <td>1997-06-25</td>\n      <td>9</td>\n      <td>4800.0</td>\n      <td>103.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Pataballa</td>\n      <td>106</td>\n      <td>Valli</td>\n      <td>valli.pataballa@sqltutorial.org</td>\n      <td>590.423.4560</td>\n      <td>1998-02-05</td>\n      <td>9</td>\n      <td>4800.0</td>\n      <td>103.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Lorentz</td>\n      <td>107</td>\n      <td>Diana</td>\n      <td>diana.lorentz@sqltutorial.org</td>\n      <td>590.423.5567</td>\n      <td>1999-02-07</td>\n      <td>9</td>\n      <td>4200.0</td>\n      <td>103.0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Greenberg</td>\n      <td>108</td>\n      <td>Nancy</td>\n      <td>nancy.greenberg@sqltutorial.org</td>\n      <td>515.124.4569</td>\n      <td>1994-08-17</td>\n      <td>7</td>\n      <td>12000.0</td>\n      <td>101.0</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Faviet</td>\n      <td>109</td>\n      <td>Daniel</td>\n      <td>daniel.faviet@sqltutorial.org</td>\n      <td>515.124.4169</td>\n      <td>1994-08-16</td>\n      <td>6</td>\n      <td>9000.0</td>\n      <td>108.0</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,9 +485,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "914f1092",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:21:05.111728800Z",
+     "start_time": "2023-12-11T11:21:05.099056900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Import sqlite module\n",
@@ -510,10 +515,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ba176fd6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:21:08.959138800Z",
+     "start_time": "2023-12-11T11:21:08.948778700Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmployeeID \tName \t\tSurname \tJobID \tSalary\n",
+      "---------------------------------------------------------------------------\n",
+      "100\t\tSteven         \tKing           \t4\t24000.0\n",
+      "101\t\tNeena          \tKochhar        \t5\t17000.0\n",
+      "102\t\tLex            \tDe Haan        \t5\t17000.0\n",
+      "108\t\tNancy          \tGreenberg      \t7\t12000.0\n",
+      "114\t\tDen            \tRaphaely       \t14\t11000.0\n",
+      "145\t\tJohn           \tRussell        \t15\t14000.0\n",
+      "146\t\tKaren          \tPartners       \t15\t13500.0\n",
+      "201\t\tMichael        \tHartstein      \t10\t13000.0\n",
+      "205\t\tShelley        \tHiggins        \t2\t12000.0\n"
+     ]
+    }
+   ],
    "source": [
     "#set a line variable to be utilised as the format for displaying the result\n",
     "line=\"-\"\n",
@@ -545,10 +573,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7c727cb5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:21:35.177430900Z",
+     "start_time": "2023-12-11T11:21:35.165385800Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmployeeID \tName \t\tSurname \tJobID \tSalary \tDepartment\n",
+      "---------------------------------------------------------------------------\n",
+      "109\t\tDaniel         \tFaviet         \t6\t9000.0\t10\n",
+      "110\t\tJohn           \tChen           \t6\t8200.0\t10\n",
+      "111\t\tIsmael         \tSciarra        \t6\t7700.0\t10\n",
+      "112\t\tJose Manuel    \tUrman          \t6\t7800.0\t10\n",
+      "113\t\tLuis           \tPopp           \t6\t6900.0\t10\n"
+     ]
+    }
+   ],
    "source": [
     "# SQL statement to retrieve all columns from the employee table where the salary \n",
     "# value for those rows is less than 10000 and in the department 10\n",
@@ -571,10 +618,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "81a25d19",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:21:51.666390800Z",
+     "start_time": "2023-12-11T11:21:51.641725100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmployeeID \tName \t\tSurname \tJobID \tSalary \tManager\n",
+      "---------------------------------------------------------------------------\n",
+      "101\t\tNeena          \tKochhar        \t5\t17000.0\t100\n",
+      "102\t\tLex            \tDe Haan        \t5\t17000.0\t100\n",
+      "114\t\tDen            \tRaphaely       \t14\t11000.0\t100\n",
+      "120\t\tMatthew        \tWeiss          \t19\t8000.0\t100\n",
+      "121\t\tAdam           \tFripp          \t19\t8200.0\t100\n",
+      "122\t\tPayam          \tKaufling       \t19\t7900.0\t100\n",
+      "123\t\tShanta         \tVollman        \t19\t6500.0\t100\n",
+      "145\t\tJohn           \tRussell        \t15\t14000.0\t100\n",
+      "146\t\tKaren          \tPartners       \t15\t13500.0\t100\n",
+      "176\t\tJonathon       \tTaylor         \t16\t8600.0\t100\n",
+      "177\t\tJack           \tLivingston     \t16\t8400.0\t100\n",
+      "178\t\tKimberely      \tGrant          \t16\t7000.0\t100\n",
+      "179\t\tCharles        \tJohnson        \t16\t6200.0\t100\n",
+      "201\t\tMichael        \tHartstein      \t10\t13000.0\t100\n"
+     ]
+    }
+   ],
    "source": [
     "# SQL statement to retrieve all columns from the employee table where the job_id \n",
     "# value for those rows is 16 or the manager_id is 100\n",
@@ -598,10 +673,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5a62b59d",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-11T11:22:17.875391400Z",
+     "start_time": "2023-12-11T11:22:17.861204400Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmployeeID \tName \t\tSurname \tJobID \tSalary\n",
+      "---------------------------------------------------------------------------\n",
+      "100\t\tSteven         \tKing           \t4\t24000.0\n",
+      "101\t\tNeena          \tKochhar        \t5\t17000.0\n",
+      "102\t\tLex            \tDe Haan        \t5\t17000.0\n",
+      "103\t\tAlexander      \tHunold         \t9\t9000.0\n",
+      "104\t\tBruce          \tErnst          \t9\t6000.0\n",
+      "105\t\tDavid          \tAustin         \t9\t4800.0\n",
+      "106\t\tValli          \tPataballa      \t9\t4800.0\n",
+      "107\t\tDiana          \tLorentz        \t9\t4200.0\n",
+      "108\t\tNancy          \tGreenberg      \t7\t12000.0\n",
+      "109\t\tDaniel         \tFaviet         \t6\t9000.0\n",
+      "110\t\tJohn           \tChen           \t6\t8200.0\n",
+      "111\t\tIsmael         \tSciarra        \t6\t7700.0\n",
+      "112\t\tJose Manuel    \tUrman          \t6\t7800.0\n",
+      "113\t\tLuis           \tPopp           \t6\t6900.0\n",
+      "114\t\tDen            \tRaphaely       \t14\t11000.0\n",
+      "115\t\tAlexander      \tKhoo           \t13\t3100.0\n",
+      "116\t\tShelli         \tBaida          \t13\t2900.0\n",
+      "117\t\tSigal          \tTobias         \t13\t2800.0\n",
+      "118\t\tGuy            \tHimuro         \t13\t2600.0\n",
+      "119\t\tKaren          \tColmenares     \t13\t2500.0\n",
+      "126\t\tIrene          \tMikkilineni    \t18\t2700.0\n",
+      "145\t\tJohn           \tRussell        \t15\t14000.0\n",
+      "146\t\tKaren          \tPartners       \t15\t13500.0\n",
+      "176\t\tJonathon       \tTaylor         \t16\t8600.0\n",
+      "177\t\tJack           \tLivingston     \t16\t8400.0\n",
+      "178\t\tKimberely      \tGrant          \t16\t7000.0\n",
+      "179\t\tCharles        \tJohnson        \t16\t6200.0\n",
+      "192\t\tSarah          \tBell           \t17\t4000.0\n",
+      "193\t\tBritney        \tEverett        \t17\t3900.0\n",
+      "200\t\tJennifer       \tWhalen         \t3\t4400.0\n",
+      "201\t\tMichael        \tHartstein      \t10\t13000.0\n",
+      "202\t\tPat            \tFay            \t11\t6000.0\n",
+      "203\t\tSusan          \tMavris         \t8\t6500.0\n",
+      "204\t\tHermann        \tBaer           \t12\t10000.0\n",
+      "205\t\tShelley        \tHiggins        \t2\t12000.0\n",
+      "206\t\tWilliam        \tGietz          \t1\t8300.0\n"
+     ]
+    }
+   ],
    "source": [
     "# SQL statement to retrieve all columns from the employee table where the job_id\n",
     "# value for those rows is not 19\n",
